--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,74 @@
-.App {
-  text-align: center;
+body {
+    background: url(./images/redbkg.jpg);
+    font-family: 'Poiret One', cursive;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.header {
+    /* background-color: rgb(254, 220, 61); */
+    /* background-color: #8e0000; */
+    height: 100px;
+    padding: 20px;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.header h1 {
+    font-size: 4em;
+    font-weight: bold;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, .5);
 }
 
-.App-intro {
-  font-size: large;
+.navBar {
+    background-color: black;
+    width: 114px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: left;
+    border-radius: 0 0 25px 0;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.navButton {
+    font-size: 1.2em;
+    background-color: lightgray;
+    box-sizing: content-box;
+    text-align: center;
+    width: 83px;
+    padding: .5em .7em .5em .5em;
+    border-radius: 0 0 25px 0;
+    font-weight: bold;
+}
+
+.navButton:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 25px white;
+}
+
+.mainWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.mainContent {
+    background-color: black;
+    flex: 2;
+    width: 700px;
+    height: 600px;
+    margin: 0em 2em;
+    border-radius: 0 0 0 25px;
+}
+
+.picture {
+    align-items: right;
+    flex: 1;
+    background: url(./images/clarinetguitar600x429.png);
+    background-image: cover;
+    background-repeat: no-repeat;
+    margin-right: 1em;
+    border-radius: 25px;
 }
