--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,26 @@
 body {
-    background: url(./images/redbkg.jpg);
+    background-color: white;
+    background-size: cover;
     font-family: 'Poiret One', cursive;
 }
 
 .header {
-    /* background-color: rgb(254, 220, 61); */
-    /* background-color: #8e0000; */
-    height: 100px;
-    padding: 20px;
-    color: white;
+    height: 162px;
+    color: #ba0000;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    background-color: rgb(22, 22, 22);
 }
 
 .header h1 {
+    flex: 1;
+    text-align: center;
     font-size: 4em;
-    font-weight: bold;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, .5);
+    font-weight: bold34;
+    /* text-shadow: 2px 2px 8px rgba(0, 0, 0, .9); */
+    text-shadow: 2px 2px 5px #8b0202;
 }
 
 .navBar {
@@ -34,7 +36,7 @@ body {
 
 .navButton {
     font-size: 1.2em;
-    background-color: lightgray;
+    background-color: pink;
     box-sizing: content-box;
     text-align: center;
     width: 83px;
@@ -55,12 +57,15 @@ body {
 }
 
 .mainContent {
-    background-color: black;
+    background-color: rgba(0, 0, 0, .3);
     flex: 2;
+    box-sizing: border-box;
     width: 700px;
     height: 600px;
-    margin: 0em 2em;
-    border-radius: 0 0 0 25px;
+    margin: 0em 3em;
+    border-radius: 0 0 25px 25px;
+    /* text-align: center; */
+    padding: 1em;
 }
 
 .picture {
@@ -71,4 +76,27 @@ body {
     background-repeat: no-repeat;
     margin-right: 1em;
     border-radius: 25px;
+}
+
+.space {
+    width: 114px;
+    padding: 2em;
+}
+
+.clarinet {
+    background: url(./images/clarinet.png);
+    height: 162px;
+    width: 162px;
+}
+
+.guitar {
+    background: url(./images/guitar.png);
+    height: 146px;
+    width: 146px;
+}
+
+@media (max-width: 500px) {
+    .navBar {
+        display: none;
+    }
 }
