--- a/src/App.css
+++ b/src/App.css
@@ -1,102 +1,171 @@
 body {
-    background-color: white;
+    font-family: "Poiret One", cursive;
+    min-height: 862px;
+}
+
+@font-face {
+    font-family: Grenadier;
+    src: url(./fonts/GrenadierNF.otf);
+}
+
+html {
+    background: url(images/clubbkg.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    font-family: 'Poiret One', cursive;
+    height: 100%;
 }
 
 .header {
-    height: 162px;
-    color: #ba0000;
+    height: 8em;
     display: flex;
+    color: rgba(212, 61, 40, 6);
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: rgb(22, 22, 22);
+    background-color: rgba(22, 22, 22, 0.7);
+    /* background-color: rgba(212, 61, 40, 0.6); */
 }
 
 .header h1 {
+    font-family: Grenadier;
     flex: 1;
     text-align: center;
     font-size: 4em;
     font-weight: bold34;
-    /* text-shadow: 2px 2px 8px rgba(0, 0, 0, .9); */
-    text-shadow: 2px 2px 5px #8b0202;
+    text-shadow: 2px 8px 10px rgb(0, 0, 0);
+}
+
+.footer {
+    right: 0;
+    bottom: 0;
+    left: 0;
+    color: rgba(212, 61, 40, 1);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgba(22, 22, 22, 0.7);
+}
+
+.icon {
+    flex: 0;
+    text-decoration: none;
+    color: inherit;
+}
+
+.year {
+    text-align: center;
+}
+
+.email {
+    flex: 0;
+    text-decoration: none;
+    color: inherit;
+    font-size: 1.2em;
+}
+
+.email:hover,
+.icon:hover {
+    color: blue;
 }
 
 .navBar {
-    background-color: black;
-    width: 114px;
+    font-family: "Poiret One", cursive;
+    /* background-color: black; */
+    background-color: rgba(73, 107, 130, 0.7);
+    width: 7em;
     height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: left;
     border-radius: 0 0 25px 0;
+    box-shadow: 0px 0px 25px;
 }
 
 .navButton {
-    font-size: 1.2em;
-    background-color: pink;
+    font-size: 1.3em;
+    background-color: #dba834;
     box-sizing: content-box;
     text-align: center;
-    width: 83px;
-    padding: .5em .7em .5em .5em;
+    width: 3.8em;
+    padding: 0.5em 0.7em 0.5em 0.3em;
     border-radius: 0 0 25px 0;
     font-weight: bold;
+    transition: width 0.5s;
+    transition-timing-function: linear;
 }
 
 .navButton:hover {
     cursor: pointer;
-    box-shadow: 0px 0px 25px white;
+    box-shadow: 0px 5px 3px gray;
+    width: 4.38em;
 }
 
 .mainWrapper {
+    flex: 1 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.mainContent {
-    background-color: rgba(0, 0, 0, .3);
+.viewer {
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    background-color: rgba(255, 255, 255, 0.5);
     flex: 2;
     box-sizing: border-box;
     width: 700px;
     height: 600px;
-    margin: 0em 3em;
+    margin: 0em 10em 0 3em;
     border-radius: 0 0 25px 25px;
     /* text-align: center; */
     padding: 1em;
+    box-shadow: 0px 5px 25px;
 }
 
-.picture {
-    align-items: right;
-    flex: 1;
-    background: url(./images/clarinetguitar600x429.png);
-    background-image: cover;
-    background-repeat: no-repeat;
-    margin-right: 1em;
-    border-radius: 25px;
-}
-
-.space {
-    width: 114px;
-    padding: 2em;
-}
-
-.clarinet {
-    background: url(./images/clarinet.png);
-    height: 162px;
-    width: 162px;
-}
-
-.guitar {
-    background: url(./images/guitar.png);
-    height: 146px;
-    width: 146px;
-}
-
-@media (max-width: 500px) {
+@media screen and (max-width: 500px) {
+    .header h1 {
+        font-size: 3em;
+    }
     .navBar {
-        display: none;
+        flex: 1;
+        width: 100%;
+        height: 2em;
+        flex-direction: row;
+        border-radius: 0;
+    }
+    .navButton {
+        font-size: 0.7em;
+        width: 3.5em;
+        height: 1.5em;
+        border-radius: 0 0 5px 0;
+        font-weight: bold;
+    }
+    .navButton:hover {
+        width: 4em;
+        box-shadow: 0px 5px 5px gray;
+    }
+    .viewer {
+        width: 95%;
+        padding: 1em;
+        margin: 0.5em;
+    }
+    .mainWrapper {
+        flex-direction: column;
+    }
+    .footer {
+        font-size: 0.8em;
+    }
+}
+
+@media screen and (min-width: 501px) and (max-width: 768px) {
+    .viewer {
+        width: 95%;
+        padding: 1em;
+        margin: 0.5em;
     }
 }
