--- a/src/App.css
+++ b/src/App.css
@@ -1,66 +1,81 @@
-body {
-    font-family: "Poiret One", cursive;
-    min-height: 862px;
-}
-
 @font-face {
     font-family: Grenadier;
     src: url(./fonts/GrenadierNF.otf);
 }
 
+body {
+    font-family: "Poiret One", cursive;
+    height: 100%;
+}
+
 html {
-    background: url(images/clubbkg.jpg) no-repeat center center fixed;
+    background: url(images/jazz2.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 100%;
 }
+
+
+/* black bkg with redtext header */
 
 .header {
     height: 8em;
     display: flex;
-    color: rgba(212, 61, 40, 6);
+    color: rgb(212, 61, 40);
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: rgba(22, 22, 22, 0.7);
-    /* background-color: rgba(212, 61, 40, 0.6); */
+    text-align: center;
+    background-color: rgb(22, 22, 22);
 }
+
+
+/* red bkg w/blacktext header */
+
+
+/* .header {
+    height: 8em;
+    display: flex;
+    background-color: rgb(212, 61, 40);
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    color: rgb(22, 22, 22);
+} */
 
 .header h1 {
     font-family: Grenadier;
     flex: 1;
     text-align: center;
-    font-size: 4em;
+    font-size: 6.4em;
     font-weight: bold34;
-    text-shadow: 2px 8px 10px rgb(0, 0, 0);
+    text-shadow: 2px 8px 10px rgb(114, 10, 10);
 }
 
 .footer {
-    right: 0;
-    bottom: 0;
-    left: 0;
     color: rgba(212, 61, 40, 1);
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background-color: rgba(22, 22, 22, 0.7);
+    background-color: rgba(0, 0, 0, 0.9);
+    position: absolute;
+    height: 4em;
+    padding-bottom: 2em;
 }
 
-.icon {
-    flex: 0;
-    text-decoration: none;
-    color: inherit;
+.spacer {
+    height: 5em;
 }
 
 .year {
     text-align: center;
 }
 
-.email {
+.email,
+.icon {
     flex: 0;
     text-decoration: none;
     color: inherit;
@@ -75,7 +90,7 @@ html {
 .navBar {
     font-family: "Poiret One", cursive;
     /* background-color: black; */
-    background-color: rgba(73, 107, 130, 0.7);
+    background-color: rgba(73, 107, 130, 0.9);
     width: 7em;
     height: 600px;
     display: flex;
@@ -83,7 +98,7 @@ html {
     justify-content: space-around;
     align-items: left;
     border-radius: 0 0 25px 0;
-    box-shadow: 0px 0px 25px;
+    box-shadow: 0px 5px 10px;
 }
 
 .navButton {
@@ -106,7 +121,6 @@ html {
 }
 
 .mainWrapper {
-    flex: 1 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -120,14 +134,51 @@ html {
     box-sizing: border-box;
     width: 700px;
     height: 600px;
-    margin: 0em 10em 0 3em;
+    margin: 0em 3em;
     border-radius: 0 0 25px 25px;
     /* text-align: center; */
     padding: 1em;
-    box-shadow: 0px 5px 25px;
+    box-shadow: 0px 5px 10px;
+}
+
+.picture_spacer {
+    flex: 0.5;
+}
+
+.Tim {
+    flex: 1;
+    background: url(./images/tim.png);
+    border-radius: 0 0 0 10px;
+    box-shadow: 0px 5px 10px;
+}
+
+.Paul {
+    flex: 1;
+    background: url(./images/paul.jpg);
+    border-radius: 10px 0 0 10px;
+    box-shadow: 0px 5px 10px;
+}
+
+.bass {
+    flex: 1;
+    background: url(./images/bass.png);
+    border-radius: 10px 0 0 10px;
+    box-shadow: 0px 5px 10px;
+}
+
+.pictures {
+    width: 10em;
+    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    opacity: 0.94;
+    border-radius: 10px 0 0 10px;
 }
 
 @media screen and (max-width: 500px) {
+    .header {
+        height: 5em;
+    }
     .header h1 {
         font-size: 3em;
     }
@@ -152,7 +203,7 @@ html {
     .viewer {
         width: 95%;
         padding: 1em;
-        margin: 0.5em;
+        margin: 0 1em;
     }
     .mainWrapper {
         flex-direction: column;
@@ -162,10 +213,34 @@ html {
     }
 }
 
-@media screen and (min-width: 501px) and (max-width: 768px) {
+@media (min-width: 501px) and (max-width: 768px) {
+    .header h1 {
+        font-size: 4em;
+    }
+    .navBar {
+        flex: 1;
+        width: 100%;
+        height: 2em;
+        flex-direction: row;
+        border-radius: 0;
+    }
+    .navButton {
+        font-size: 0.7em;
+        width: 3.5em;
+        height: 1.5em;
+        border-radius: 0 0 5px 0;
+        font-weight: bold;
+    }
+    .navButton:hover {
+        width: 4em;
+        box-shadow: 0px 5px 5px gray;
+    }
     .viewer {
         width: 95%;
         padding: 1em;
-        margin: 0.5em;
+        margin: 0 1em;
+    }
+    .mainWrapper {
+        flex-direction: column;
     }
 }
