--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ html {
     height: 600px;
     margin: 0em 3em;
     border-radius: 0 0 25px 25px;
-    /* text-align: center; */
+    text-align: center;
     padding: 1em;
     box-shadow: 0px 5px 10px;
 }
@@ -201,15 +201,19 @@ html {
         box-shadow: 0px 5px 5px gray;
     }
     .viewer {
-        width: 95%;
-        padding: 1em;
-        margin: 0 1em;
+        width: 370px;
+        flex: 1;
+        margin: auto;
     }
     .mainWrapper {
+        width: 100%;
         flex-direction: column;
     }
     .footer {
         font-size: 0.8em;
+    }
+    .spacer {
+        height: 6em;
     }
 }
 
@@ -237,8 +241,7 @@ html {
     }
     .viewer {
         width: 95%;
-        padding: 1em;
-        margin: 0 1em;
+        margin: auto;
     }
     .mainWrapper {
         flex-direction: column;
