--- a/src/App.css
+++ b/src/App.css
@@ -168,7 +168,49 @@ ul {
     border-radius: 10px 0 0 10px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (min-width: 300px) and (max-width: 399px) {
+    .header {
+        height: 5em;
+    }
+    .header h1 {
+        font-size: 2.5em;
+    }
+    .navBar {
+        flex: 1;
+        width: 100%;
+        height: 2em;
+        flex-direction: row;
+        border-radius: 0;
+    }
+    .navButton {
+        font-size: 0.7em;
+        width: 3.5em;
+        height: 1.5em;
+        border-radius: 0 0 5px 0;
+        font-weight: bold;
+    }
+    .navButton:hover {
+        width: 4em;
+        box-shadow: 0px 5px 5px gray;
+    }
+    .viewer {
+        width: 320px;
+        flex: 1;
+        margin: auto;
+    }
+    .mainWrapper {
+        width: 100%;
+        flex-direction: column;
+    }
+    .footer {
+        font-size: 0.6em;
+    }
+    .spacer {
+        height: 6em;
+    }
+}
+
+@media screen and (min-width: 400px) and (max-width: 500px) {
     .header {
         height: 5em;
     }
