--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,29 @@ html {
     font-size: 3em;
 }
 
+.songs {
+    height: 592px;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    -webkit-column-gap: 1.5em;
+    column-gap: 1.5em;
+    -moz-column-gap: 1.5em;
+    overflow: auto;
+    padding: 0.5em;
+}
+
+.songs ul {
+    list-style-type: none;
+    text-align: left;
+    flex-direction: column;
+    padding: 0.1em;
+}
+
+ul li:first-child {
+    margin-top: -1em;
+}
+
 .navBar {
     font-family: "Poiret One", cursive;
     /* background-color: black; */
@@ -121,9 +144,8 @@ html {
 }
 
 .viewer {
+    font-size: 1.2em;
     display: flex;
-    justify-content: center;
-    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     background-color: rgba(255, 255, 255, 0.8);
@@ -133,7 +155,6 @@ html {
     margin: 0em 3em;
     border-radius: 0 0 25px 25px;
     text-align: center;
-    padding: 1em;
     box-shadow: 0px 5px 10px;
 }
 
@@ -143,12 +164,8 @@ html {
     align-content: center;
 }
 
-.viewer>* {
-    padding: 1em;
-    font-size: 1.2em;
-}
-
-ul {
+cal_list ul {
+    list-style-position: inside;
     list-style-type: none;
     padding: 0em;
 }
