--- a/src/App.css
+++ b/src/App.css
@@ -74,13 +74,27 @@ body {
 
 .gallery_main {
     display: flex;
+    min-width: 100%;
+    max-height: 600px;
     flex-direction: row;
     align-items: center;
-    margin: auto;
+    justify-content: space-between;
+}
+
+.pic_display {
+    flex: 6;
+    width: inherit;
+    height: inherit;
+}
+
+.pic_display>img {
+    max-width: 100%;
+    height: 100%;
 }
 
 .left,
 .right {
+    flex: 1;
     font-size: 3em;
     color: gray;
 }
@@ -179,12 +193,6 @@ ul li:first-child {
     border-radius: 0 0 25px 25px;
     text-align: center;
     box-shadow: 0px 5px 10px;
-}
-
-.viewer img {
-    display: flex;
-    justify-content: center;
-    align-content: center;
 }
 
 .cal_list {
