--- a/src/App.css
+++ b/src/App.css
@@ -149,7 +149,6 @@ ul li:first-child {
 
 .navBar {
     font-family: "Poiret One", cursive;
-    /* background-color: black; */
     background-color: rgba(73, 107, 130, 0.9);
     width: 7em;
     height: 600px;
@@ -243,12 +242,25 @@ ul li:first-child {
     border-radius: 10px 0 0 10px;
 }
 
-@media screen and (min-width: 300px) and (max-width: 399px) {
+@media screen and (min-width: 200px) and (max-width: 399px) {
     .header {
         height: 5em;
     }
     .header h1 {
         font-size: 2.5em;
+    }
+    .songs {
+        height: 592px;
+        -webkit-column-count: 1;
+        -moz-column-count: 1;
+        column-count: 1;
+        -webkit-column-gap: 1.5em;
+        column-gap: 1.5em;
+        -moz-column-gap: 1.5em;
+        overflow: auto;
+        padding: 0.5em;
+        align-items: center;
+        flex: 1;
     }
     .navBar {
         flex: 1;
@@ -270,13 +282,16 @@ ul li:first-child {
         box-shadow: 0px 5px 5px gray;
     }
     .viewer {
-        width: 320px;
+        width: inherit;
         flex: 1;
         margin: auto;
     }
     .mainWrapper {
         width: 100%;
         flex-direction: column;
+    }
+    .email {
+        font-size: 1em;
     }
     .footer {
         font-size: 0.6em;
@@ -288,7 +303,7 @@ ul li:first-child {
         justify-content: space-between;
         align-items: center;
         height: 12em;
-        width: 320px;
+        width: inherit;
         margin: auto;
         border-radius: 15px;
         flex-direction: row;
@@ -307,6 +322,19 @@ ul li:first-child {
     }
     .header h1 {
         font-size: 3em;
+    }
+    .songs {
+        height: 592px;
+        -webkit-column-count: 1;
+        -moz-column-count: 1;
+        column-count: 1;
+        -webkit-column-gap: 1.5em;
+        column-gap: 1.5em;
+        -moz-column-gap: 1.5em;
+        overflow: auto;
+        padding: 0.5em;
+        align-items: center;
+        flex: 1;
     }
     .navBar {
         flex: 1;
@@ -364,7 +392,7 @@ ul li:first-child {
     }
 }
 
-@media (min-width: 501px) and (max-width: 768px) {
+@media (min-width: 501px) and (max-width: 767px) {
     .header h1 {
         font-size: 4em;
     }
