--- a/src/App.css
+++ b/src/App.css
@@ -79,11 +79,10 @@ body {
 
 .gallery_main {
     display: flex;
-    min-width: 100%;
     max-height: 600px;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    margin: auto;
 }
 
 .pic_display {
@@ -94,7 +93,8 @@ body {
 
 .pic_display>img {
     max-width: 100%;
-    height: 100%;
+    width: 100%;
+    height: auto;
 }
 
 .left,
@@ -293,8 +293,15 @@ ul li:first-child {
     .email {
         font-size: 1em;
     }
+    .bigger {
+        display: none;
+    }
     .footer {
-        font-size: 0.6em;
+        flex-direction: column;
+        font-size: 1em;
+        justify-content: space-around;
+        height: auto;
+        padding-bottom: 1em;
     }
     .spacer {
         height: 6em;
@@ -370,7 +377,7 @@ ul li:first-child {
         flex-direction: column;
     }
     .footer {
-        font-size: 0.8em;
+        font-size: 1em;
     }
     .spacer {
         height: 6em;
@@ -443,9 +450,6 @@ ul li:first-child {
         width: 9em;
         border-radius: 15px;
         background-size: cover;
-    }
-    .gallery_main {
-        flex-direction: column;
     }
 }
 
